feat: header 레이아웃 완료

--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -216,6 +216,21 @@
                 </nav>
                 <!--GNB BG-->
                 <div class="gnbBg"></div>
+                <!-- Util Menu -->
+                <ul class="utilMenu">
+                    <li>
+                        <a href="/sub/login.html" class="xi-log-in xi-2x"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="xi-user-plus-o xi-2x"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="xi-coupon xi-2x"></a>
+                    </li>
+                    <li>
+                        <button type="submit" class="xi-search xi-2x"></button>
+                    </li>
+                </ul>
                 <!--뒤로가기 Btn-->
                 <button class="backBtn" onclick="window.history.back()">
                     <span>
