--- a/html/scss/header2.scss
+++ b/html/scss/header2.scss
@@ -1,4 +1,45 @@
-
+html{
+    background-color: #191919;
+    body{
+        // 구글폰트 Noto Sans KR (100-900)
+        .noto-sans-kr-light-300 {
+            font-family: "Noto Sans KR", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 300;
+            font-style: normal;
+        }
+        .noto-sans-kr-regular-400 {
+            font-family: "Noto Sans KR", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
+        }
+        .noto-sans-kr-medium-500 {
+            font-family: "Noto Sans KR", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 500;
+            font-style: normal;
+        }
+        .noto-sans-kr-bold-700 {
+            font-family: "Noto Sans KR", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 700;
+            font-style: normal;
+        }
+        //구글폰트 Roboto (En, 100-900, italic)
+        .roboto-bold-italic {
+            font-family: "Roboto", sans-serif;
+            font-weight: 700;
+            font-style: italic;
+        }          
+        
+        background-color: #191919;
+        font-family: "Noto Sans KR", sans-serif;
+        font-weight: 400;
+        font-size: 16px;
+        // height: 100vh;
+    }
+}
 
 .topBanner{
     width: 100%;
