--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -78,8 +78,9 @@
 </footer>
 
 <!-- <script src="/js/jquery-3.7.1.min.js"></script> -->
- <script src="/bootstrap-5.3.3-css-js/js/bootstrap.js"></script>
+<script src="/bootstrap-5.3.3-css-js/js/bootstrap.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> <!--Swiper JS CDN-->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="/js/header.js"></script>
 <script src="/js/main.js"></script>
 </body>
