--- a/html/bootstrap-5.3.3-css-js/css/bootstrap.css
+++ b/html/bootstrap-5.3.3-css-js/css/bootstrap.css
@@ -211,13 +211,13 @@ hr {
   opacity: 0.25;
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+/* h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
   color: var(--bs-heading-color);
-}
+} */
 
 h1, .h1 {
   font-size: calc(1.375rem + 1.5vw);
