--- a/html/scss/header.scss
+++ b/html/scss/header.scss
@@ -1,5 +1,5 @@
 html{
-    background-color: #191919;
+    background-color: #000;
     body{
         // 구글폰트 Noto Sans KR (100-900)
         .noto-sans-kr-light-300 {
@@ -33,10 +33,8 @@ html{
             font-style: italic;
         }          
         
-        background-color: #191919;
+        background-color: #000;
         font-family: "Noto Sans KR", sans-serif;
-        font-weight: 400;
-        font-size: 16px;
         // height: 100vh;
     }
 }
@@ -231,6 +229,7 @@ html{
                 top: 0;
                 right: 40px;
                 display: flex;
+                align-items: center;
                 gap: 6px;
                 li{
                     a{
