--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -1,83 +1,123 @@
-<footer>
-    <ul id="footerTopMenu">
-        <li><a href="#">회사소개</a><span></span></li>
-        <li><a href="#">이용약관</a><span></span></li>
-        <li><a href="#">개인정보 처리방침</a><span></span></li>
-        <li><a href="#">이메일 무단수집거부</a><span></span></li>
-        <li><a href="#">영상정보처리기기 운영 및 관리방침</a><span></span></li>
-        <li><a href="#">고객센터</a><span></span></li>
-        <li><a href="#">인재채용</a><span></span></li>
-        <li><a href="#">대관문의</a><span></span></li>
-    </ul>
-    <div id="footerBottomBox">
-        <div id="footerLeft">
-            <h3><a href="#"><img src="/img/logo/logoEnWhite.svg" alt="하단 로고 이미지"></a></h3>
-            <ul class="companyInfo">
-                <li class="boldText">서울특별시 종로구 청계천로 85 17층(관철동, 삼일빌딩) 소담씨네</li>
-                <li>
-                    <span>
-                        <span>사업자 등록번호</span>
-                        <span class="boldText">123-45-67890</span>
-                    </span>
-                    <span>
-                        <span>통신판매업 신고번호</span>
-                        <span class="boldText">제1234호</span>
-                    </span>
-                </li>
-                <li>
-                    <span>
-                        <span>대표이사</span>
-                        <span class="boldText">심채림</span>
-                    </span>
-                    <span>
-                        <span>개인정보 보호 책임자</span>
-                        <span class="boldText">심채림</span>
-                    </span>
-                    <span>
-                        <span>호스팅 제공자</span>
-                        <span class="boldText">닷홈</span>
-                    </span>
-                </li>
-                <li><span class="boldText">Copyright © SODAM CINE All Right Reserved.</span></li>
-            </ul>
-        </div>
-        <div id="footerRight">
-            <div class="familySiteBox">
-                <button>
-                    <span>Family Site</span>
-                    <span class="xi-angle-up-thin openBtn"></span>
-                </button>
-                <ul>
-                    <li><a href="#">Family Site 1</a></li>
-                    <li><a href="#">Family Site 2</a></li>
+<footer id="footer" class="d-flex flex-column">
+    <div class="footerContianer01">
+        <ul class="footerTopMenu d-flex justify-content-center mx-auto">
+            <li class="d-flex align-items-center">
+                <a href="#">회사소개</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">이용약관</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">개인정보 처리방침</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">이메일 무단수집거부</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">영상정보처리기기 운영 및 관리방침</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">고객센터</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">인재채용</a>
+                <span></span>
+            </li>
+            <li class="d-flex align-items-center">
+                <a href="#">대관문의</a>
+                <span></span>
+            </li>
+        </ul>
+    </div>
+    <div class="footerContianer02 py-4">
+        <div class="footerBottomBox d-flex justify-content-between mx-auto">
+            <div class="footerLeft d-flex flex-column">
+                <h3>
+                    <a class="d-block" href="#">
+                        <img class="d-block" src="/img/logo/logoEnWhite.svg" alt="소담씨네 로고">
+                    </a>
+                </h3>
+                <ul class="companyInfo d-flex flex-column align-items-start">
+                    <li class="boldText">서울특별시 종로구 청계천로 85 17층(관철동, 삼일빌딩) 소담씨네</li>
+                    <li class="d-flex">
+                        <span class="d-flex">
+                            <span>사업자 등록번호</span>
+                            <span class="boldText">123-45-67890</span>
+                        </span>
+                        <span>
+                            <span>통신판매업 신고번호</span>
+                            <span class="boldText">제1234호</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                            <span>대표이사</span>
+                            <span class="boldText">심채림</span>
+                        </span>
+                        <span>
+                            <span>개인정보 보호 책임자</span>
+                            <span class="boldText">심채림</span>
+                        </span>
+                        <span>
+                            <span>호스팅 제공자</span>
+                            <span class="boldText">닷홈</span>
+                        </span>
+                    </li>
+                    <li><span class="boldText">Copyright © SODAM CINE All Right Reserved.</span></li>
                 </ul>
             </div>
-            <ul class="contactBox">
-                <li>
-                    <a href="tel:01076662230">
-                        <span class="xi-call xi-2x xi-fw"></span>
-                        <span>
-                            고객센터<br>
-                            <strong>010.7666.2230</strong>
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:tlacofla1018@naver.com">
-                        <span class="xi-mail-o xi-2x xi-fw"></span>
-                        <span>
-                            대표 이메일<br>
-                            <strong>tlacofla1018@naver.com</strong>
-                        </span>
-                        
-                    </a>
-                </li>
-            </ul>
+            <div class="footerRight d-flex flex-column">
+                <div class="familySiteBox">
+                    <button class="d-flex align-items-center justify-content-between">
+                        <span>Family Site</span>
+                        <span class="xi-angle-up-thin openBtn"></span>
+                    </button>
+                    <ul>
+                        <li>
+                            <a href="#">Family Site 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Family Site 2</a>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="contactBox d-flex flex-column">
+                    <li>
+                        <a class="d-flex align-items-center" href="tel:01234567890">
+                            <span class="xi-call xi-2x xi-fw"></span>
+                            <span>
+                                고객센터<br>
+                                <strong>012.3456.7890</strong>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="d-flex align-items-center" href="mailto:1234@google.com">
+                            <span class="xi-mail-o xi-2x xi-fw"></span>
+                            <span>
+                                대표 이메일<br>
+                                <strong>1234@google.com</strong>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
 
-<!-- <script src="/js/jquery-3.7.1.min.js"></script> -->
+<div id="toTop">
+    <div class="material-icons">arrow_upward</div>
+</div>
+
+
+
 <script src="/bootstrap-5.3.3-css-js/js/bootstrap.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> <!--Swiper JS CDN-->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
