feat: 0926 작업기록 -> 부트스트랩과 미디어쿼리를 활용한 메인인덱스 페이지 반응형 작업(추후 수정 예정)

--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -1,6 +1,6 @@
-<footer id="footer" class="d-flex flex-column">
+<footer id="footer" class="d-lg-flex flex-column">
     <div class="footerContianer01">
-        <ul class="footerTopMenu d-flex justify-content-center mx-auto">
+        <ul class="footerTopMenu d-flex flex-wrap justify-content-center mx-auto">
             <li class="d-flex align-items-center">
                 <a href="#">회사소개</a>
                 <span></span>
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <div class="footerRight d-flex flex-column">
-                <div class="familySiteBox">
+                <!-- <div class="familySiteBox">
                     <button class="d-flex align-items-center justify-content-between">
                         <span>Family Site</span>
                         <span class="xi-angle-up-thin openBtn"></span>
@@ -86,8 +86,8 @@
                             <a href="#">Family Site 2</a>
                         </li>
                     </ul>
-                </div>
-                <ul class="contactBox d-flex flex-column">
+                </div> -->
+                <ul class="contactBox d-none d-lg-flex flex-column">
                     <li>
                         <a class="d-flex align-items-center" href="tel:01234567890">
                             <span class="xi-call xi-2x xi-fw"></span>
@@ -112,9 +112,9 @@
     </div>
 </footer>
 
-<div id="toTop">
+<!-- <div id="toTop">
     <div class="material-icons">arrow_upward</div>
-</div>
+</div> -->
 
 
 
