--- a/html/scss/header.scss
+++ b/html/scss/header.scss
@@ -51,7 +51,7 @@ html{
     width: 100%;
     height: 60px;
     position: relative;
-    background-color: antiquewhite;
+    background: url(/img/banner/mainB/theLivesOfOthers-mB01.jpg);
     .adCloseBtnBox{
         display: flex;
         justify-content: flex-end;
