--- a/html/scss/media.scss
+++ b/html/scss/media.scss
@@ -51,6 +51,35 @@
             }
         }
     }
+    #mainMain{
+        #movieRankBox{
+            width: 90%;
+        }
+        #reviewBox{
+            width: 90%;
+        }
+        #eventBox{
+            width: 90%;
+        }
+        #previewBox{
+            width: 90%;
+        }
+        #storeBox{
+            width: 90%;
+        }
+        #instagramBox{
+            width: 90%;
+        }
+    }
+}
+@media(max-width: 1340px) {
+    #footer{
+        .footerContianer02{
+            .footerBottomBox{
+                width: 90%;
+            }
+        }
+    }
 }
 @media(max-width: 1200px) {
     #header{
@@ -62,7 +91,7 @@
         }
     }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1080px) {
     #mHeader{
         .gnbDepth02{
             li{
@@ -70,10 +99,145 @@
             }
         }
     }
+    #mainMain{
+        #previewBox{
+            .previewContent{
+                display: flex;
+                flex-wrap: wrap;
+                li{
+                    width: 32%;
+                    &.previewHover{
+                        width: 100%;
+                        a{
+                            img{
+                                height: 300px;
+                            }
+                        }
+                    }
+                    a{
+                        img{
+                            height: 120px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    #footer{
+
+    }
 }
-@media (max-width: 990px) {}
-@media (max-width: 880px) {}
-@media (max-width: 768px) {}
+@media (max-width: 990px) {
+    #mainMain{
+        transform: translateY(-56px);
+        margin: 0 0 -56px;
+        #movieRankBox{
+            .rankContainer{
+                .movieRank{
+                    .rankContainer{
+                        .movieRank{
+                            .rankContent{
+                                .swiper.mySwiper{
+                                    .swiper-wrapper{
+                                        .swiper-slide{
+                                            .topContent{
+                                                img{
+                                                    width: 220px;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        #noticeFnqBox{
+            #noticeBox{
+                width: 100%;
+                max-width: 990px;
+            }
+            #fnqBox{
+                width: 50%;
+            }
+            #contactBox{
+                width: 50%;
+            }
+        }
+    }
+}
+@media (max-width: 880px) {
+    #mainMain{
+        #eventBox{
+            .eventContentBox{
+                #topBox{
+                    .nav{
+                        .nav-item{
+                            .nav-link{
+                                .eventTitle{
+                                    display: none;
+                                }
+                                .eventContent{
+                                    &::before{
+                                        display: none;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    #mainMain{
+        #mainBannerBox{
+            height: 650px;
+            #mainBanner{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        #storeBox{
+            .storeContent{
+                width: 100% !important;
+                img{
+                    width: 100% !important;
+                }
+            }
+        }
+        #eventBox{
+            .eventContentBox{
+                .eventImg{
+                    width: 100%;
+                }
+                #topBox{
+                    width: 100%;
+                    .nav{
+                        .nav-item{
+                            .nav-link{
+                                // span{
+                                //     line-height: 40px;
+                                // }
+                                // &.active{
+                                //     span{
+                                //         line-height: 60px;
+                                //     }
+                                // }
+                                // .eventTitle{
+                                //     display: inline;
+                                // }
+                            }
+                        }
+                    }
+                }
+            }
+        }    
+    }
+}
 @media (max-width: 662px) {}
 @media (max-width: 650px) {
     html,body {
@@ -83,6 +247,19 @@
         .gnbDepth02{
             li{
                 width: 33.333%;
+            }
+        }
+    }
+    #mainMain{
+        #noticeFnqBox{
+            #noticeBox{
+                width: 100%;
+            }
+            #fnqBox{
+                width: 100%;
+            }
+            #contactBox{
+                width: 100%;
             }
         }
     }
@@ -96,6 +273,23 @@
                 font-size: 1.15rem;
             }
         }
+    }
+    #mainMain{
+        #eventBox{
+            .eventContentBox{
+                #topBox{
+                    .nav{
+                        .nav-item{
+                            .nav-link{
+                                .eventTitle{
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }    
     }
 }
 @media (max-width: 385px) {
