date: 0927백업 - 메인페이지 코드 정리 전 백업

--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -112,9 +112,9 @@
     </div>
 </footer>
 
-<!-- <div id="toTop">
-    <div class="material-icons">arrow_upward</div>
-</div> -->
+<a id="pcTopBtn" href="#top">
+    arrow_upward
+</a>
 
 
 
