--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -1,3 +1,5 @@
+@import './_var.scss'; 
+
 /* 웹접근성을 위한 스크린리더용 컨텐츠 */
 .screenReaderOnly{
     overflow: hidden;
@@ -97,8 +99,6 @@
 
 #mainMain{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     gap: 120px;
     transform: translateY(-60px);
     margin: 0 0 -60px;
@@ -124,19 +124,15 @@
             }
             // 스와이퍼 페이지네이션
             .swiper-button{
-                width: 42px;
-                height: 42px;
-                border-radius: 50%;
-                background-color: rgba(0, 0, 0, 0.2);
-                position: absolute;
-                top: calc(400px - 21px);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                z-index: 2;
-                img{
-                    width: 32px;
-                    height: 32px;
+                @include SwiperButtonDesign;
+                @mixin SwiperNextButtonPosition ($position: absolute, $top: 50%, $X, $Xnum: 0, $zIndex: 2) {
+                    position: $position;
+                    top: $top;
+                    #{$X}: $Xnum;
+                    z-index: $zIndex;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
             .swiper-button.nextBtn{
